--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-load-plugins": "^1.4.0",
     "gulp-minify-html": "^1.0.6",
     "gulp-plumber": "^1.1.0",
+    "gulp-string-replace": "^0.3.1",
     "gulp-task-listing": "^1.0.1",
     "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.11",
