--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,13 @@
 *.log
 .dev
 /assets
-/node_modules
-/www/wp-content/uploads
 /megapode-website-w17
+/node_modules
+/www/wp-content/themes/megapode-website-w17/static/scripts/bonjour-page.js
+/www/wp-content/themes/megapode-website-w17/static/scripts/comment-utiliser-page.js
+/www/wp-content/themes/megapode-website-w17/static/scripts/home-page.js
+/www/wp-content/themes/megapode-website-w17/static/scripts/megapode-templates.js
+/www/wp-content/themes/megapode-website-w17/static/scripts/nous-joindre-page.js
+/www/wp-content/themes/megapode-website-w17/static/scripts/regions-dispo-page.js
+/www/wp-content/themes/megapode-website-w17/static/scripts/vendors.js
+/www/wp-content/themes/megapode-website-w17/uploads
