Added more styles for content managed content

--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,4 @@
 /www/wp-content/themes/megapode-website-w17/static/scripts/nous-joindre-page.js
 /www/wp-content/themes/megapode-website-w17/static/scripts/regions-dispo-page.js
 /www/wp-content/themes/megapode-website-w17/static/scripts/vendors.js
-/www/wp-content/themes/megapode-website-w17/uploads
+/www/wp-content/uploads
