--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
     "jshint-stylish": "^2.2.0",
     "require-dir": "^0.3.1",
     "run-sequence": "^1.2.2"
+  },
+  "scripts": {
+    "test": "gulp build"
   }
 }
