--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-load-plugins": "^1.4.0",
     "gulp-minify-html": "^1.0.6",
     "gulp-plumber": "^1.1.0",
+    "gulp-ssh": "^0.6.0",
     "gulp-string-replace": "^0.3.1",
     "gulp-task-listing": "^1.0.1",
     "gulp-uglify": "^2.0.0",
@@ -45,7 +46,8 @@
     "jshint-loader": "^0.8.3",
     "jshint-stylish": "^2.2.0",
     "require-dir": "^0.3.1",
-    "run-sequence": "^1.2.2"
+    "run-sequence": "^1.2.2",
+    "yargs": "^6.6.0"
   },
   "scripts": {
     "test": "gulp build"
