--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-eslint": "^3.0.1",
+    "gulp-git": "^1.14.0",
     "gulp-jshint": "^2.0.1",
     "gulp-less": "^3.3.0",
     "gulp-load-plugins": "^1.4.0",
